--- a/pub-sub queues/requirements.txt
+++ b/pub-sub queues/requirements.txt
@@ -8,7 +8,7 @@ API for subscriber to consume from topic
 Maintain the state of consumption of each message in each topic for each consumer.
 Maintain order of message consumption for each consumer.
 Handle cases of consumers not being available. What to do with those messages? (Write to disk and restore?)
-Filtered message consumption in a topic by the consumer
+Filter message consumption in a topic by the consumer
 
 Plus Points:
 Separate service or component that is responsible for topics, including creation and exposing topics
